--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-# Created by .ignore support plugin (hsz.mobi)
-.idea/
+.DS_Store
 node_modules/
-yarn.lock
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
