--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
+    "express": "^4.16.2",
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "vue": "^2.5.2",
