--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
     "connect-history-api-fallback": "^1.5.0",
+    "emailjs-com": "^2.3.2",
     "express": "^4.16.2",
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
